--- a/php CRUD/stylehalaman.css
+++ b/php CRUD/stylehalaman.css
@@ -6,6 +6,12 @@
   font-family: "Segoe UI", Arial, sans-serif;
 }
 
+.navigasi{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   background-color: #f8f9fa;
   color: #333;
@@ -27,11 +33,14 @@ body {
     display: flex;
     flex-direction: column;
 }
-
+/* pindah */
 table{
     width: 100%;
 }
+.trAtas th{
+    background-color: #c74f4f;
+}
 th{
-    background-color: rgb(184, 169, 169);
+    background-color: rgb(209, 195, 195);
     border: 1px solid black;
 }
