--- a/php CRUD/stylehalamanForm.css
+++ b/php CRUD/stylehalamanForm.css
@@ -33,6 +33,7 @@ body{
     text-decoration: none;
     font-size: 1.5rem;
     font-weight: bold;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.436);
 }
         
 .kontiner {
