--- a/php CRUD/stylehalamanTabel.css
+++ b/php CRUD/stylehalamanTabel.css
@@ -26,6 +26,8 @@
     text-decoration: none;
     font-size: 1.5rem;
     font-weight: bold;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.436);
+
 }   
 table{
     width: 100%;
